--- a/BIG_DATA.ipynb
+++ b/BIG_DATA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMB6N93ZQEpCpm4w/DKKc4Y",
+      "authorship_tag": "ABX9TyOiksjz7WQaurwiVkbtKlI8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,25 +66,25 @@
         "obj1 = json.loads(jsonstr)\n",
         "print(type(obj1))\n",
         "for k, v in obj1.items():\n",
-        "  print(obj1)"
+        "  print(k, \"=>\", v)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xXcTHEVI815b",
-        "outputId": "639fbb85-a155-4ef5-a6f7-3843a69648c6"
+        "outputId": "1f0dcf26-cb2e-4255-bcd2-20ce4f24ad77"
       },
-      "execution_count": 18,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'dict'>\n",
-            "{'name': 'John', 'age': 36, 'gender': 'male'}\n",
-            "{'name': 'John', 'age': 36, 'gender': 'male'}\n",
-            "{'name': 'John', 'age': 36, 'gender': 'male'}\n"
+            "name => John\n",
+            "age => 36\n",
+            "gender => male\n"
           ]
         }
       ]
